<resources>
    <string name="app_name">Manga Quiz</string>
    <string name="name_field">Please enter your name:</string>
    <string name="question1">1. What was the martial art in the manga <b><i>Ore wa Teppei</i></b>?</string>
    <string name="answer1a">Judo</string>
    <string name="answer1b">Kenpō</string>
    <string name="answer1c">Kendo</string>
    <string name="answer1d">Kyūdō</string>
    <string name="answer1e">Aikido</string>
    <string name="question2">2. What was Doraemon\'s favorite snack in the series <b><i>Doraemon</i></b>?</string>
    <string name="answer2a">Mochi</string>
    <string name="answer2b">Dango</string>
    <string name="answer2c">Taiyaki</string>
    <string name="answer2d">Pocky</string>
    <string name="answer2e">Dorayaki</string>
    <string name="question3">3. Who was Princess Serenity in the manga series <b><i>Sailor Moon</i></b>?</string>
    <string name="answer3a">Usagi Tsukino</string>
    <string name="answer3b">Minako Aino</string>
    <string name="answer3c">Rei Hino</string>
    <string name="answer3d">Makoto Kino</string>
    <string name="answer3e">Ami Mizuno</string>
    <string name="question4">4. What were Son Goku\'s abilities and techniques? (Check all that apply)</string>
    <string name="answer4a">Fusion Dance</string>
    <string name="answer4b">Kaio-ken Finish</string>
    <string name="answer4c">Supreme Kamehameha</string>
    <string name="answer4d">Spirit Bomb</string>
    <string name="answer4e">Super Saiyan God-to-Blue Switching</string>
    <string name="question5">5. Which Shinigami gave Yagami Raito his notebook in the series <b><i>Death Note</i></b>?</string>
    <string name="answer5a">Rem</string>
    <string name="answer5b">Ryuk</string>
    <string name="answer5c">Gelus</string>
    <string name="answer5d">Sidoh</string>
    <string name="answer5e">Shinigami King</string>
    <string name="question6">6. How old was Airi Hoshina when the manga series <b><i>MeruPuri</i></b> started?</string>
    <string name="answer6a">15</string>
    <string name="answer6b">16</string>
    <string name="answer6c">17</string>
    <string name="answer6d">18</string>
    <string name="answer6e">19</string>
    <string name="question7">7. Enter the full name of the main character in the manga series <b><i>Case Closed</i></b>.</string>
    <string name="enterCharName">Enter here (not case-sensitive)</string>
    <string name="charName">Shinichi Kudo</string>
    <string name="submit">Submit</string>
    <string name="hello">Hello,\u0020</string>
    <string name="youGot">. You got\u0020</string>
    <string name="over30">/35 points.\u0020</string>
    <string name="congrats">Wow, you\'re a real manga otaku!</string>
    <string name="retry">Would you like to try again?</string>
</resources>
